<?xml version="1.0" encoding="utf-8"?>
<!--
    Nom du fichier : strings.xml
    Description    : Contient les chaînes de caractères utilisées dans l'application,
                     y compris les titres des menus
                     et le titre de la barre d'outils.
    Auteur         : Bugna, Slimani & Steiner
    Date           : 22 novembre 2024
-->
<resources>
    <!-- Menu Titles -->
    <string name="menu_sort">Trier</string>
    <string name="menu_sort_by_creation">Trier par date de création</string>
    <string name="menu_sort_by_schedule">Trier par date prévue</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_add_note">Créer une Note aléatoire</string>
    <string name="menu_delete_all">Supprimer toutes les Notes</string>

    <!-- Toolbar Title -->
    <string name="app_name">Labo 4</string>

    <!-- Preferences -->
    <string name="sorted_choice">sorted_choice</string>
    <string name="creation_date">CreationDate</string>
    <string name="schedule">Schedule</string>

    <!-- DB -->
    <string name="note_database">note_database</string>
    <string name="test_note_title">Test Note</string>
    <string name="test_note_txt">This is a test note</string>

    <!-- Other strings -->
    <string name="error_unknown_viewmodel">Unknown ViewModel class</string>
    <string name="my_notes">My notes</string>
    <string name="just_for_fun">Just for fun</string>
    <string name="action_generer">Générer</string>
    <string name="action_supprimer">Supprimer</string>
    <string name="notes_counter">%d</string>
    <string name="notes_counter_empty">No notes</string>
</resources>