<?xml version="1.0" encoding="utf-8"?>
<!--
    Nom du fichier : main_menu.xml
    Description    : Menu principal de l'application, permettant de trier les notes et d'accéder à des actions
                     supplémentaires telles que l'ajout et la suppression de notes.
    Auteur         : Bugna, Slimani & Steiner
    Date           : 22 novembre 2024
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom|withText"
        android:titleTextAppearance="@style/MenuTextStyle">
        <menu>
            <item
                android:id="@+id/action_sort_by_creation"
                android:title="@string/menu_sort_by_creation"
                android:titleTextAppearance="@style/MenuTextStyle"/>
            <item
                android:id="@+id/action_sort_by_schedule"
                android:title="@string/menu_sort_by_schedule"
                android:titleTextAppearance="@style/MenuTextStyle"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_more"
        android:title="@string/menu_actions"
        android:icon="@drawable/ic_more"
        app:showAsAction="always"
        android:titleTextAppearance="@style/MenuTextStyle">
        <menu>
            <item
                android:id="@+id/action_add_note"
                android:title="@string/menu_add_note"
                android:titleTextAppearance="@style/MenuTextStyle"/>
            <item
                android:id="@+id/action_delete_all"
                android:title="@string/menu_delete_all"
                android:titleTextAppearance="@style/MenuTextStyle"/>
        </menu>
    </item>
</menu>